# js_int

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.builds/: 1.34.2.yml  msrv.yml  nightly.yml  stable.yml
.github/workflows/: msrv.yml  nightly.yml  stable.yml
ext_tests/: Cargo.toml  README.md
ext_tests/src/: lib.rs  test_serializer.rs
src/: error.rs  int.rs  lib.rs  macros.rs  uint.rs
tests/: int.rs  test_serializer.rs  uint.rs
