[package]
name = "js_int"
description = "JavaScript-interoperable integer types"
version = "0.2.0"
authors = ["Jonas Platte <jplatte+git@posteo.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/js_int"
keywords = ["integer", "no_std"]
categories = ["no-std"]

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["derive"]

[features]
lax_deserialize = ["serde"]
default = ["std"]
std = []

[workspace]
members = ["ext_tests"]
