[package]
name = "js_int"
description = "JavaScript-interoperable integer types"
version = "0.2.2"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/js_int"
keywords = ["integer", "no_std"]
categories = ["no-std"]

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[features]
float_deserialize = ["serde"]
lax_deserialize = ["float_deserialize"]
default = ["std"]
std = []

[dev-dependencies]
serde_test = "1.0"
